// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton component > General > Dimensions 1`] = `
.c0 {
  height: 30px;
}

<div
  class="c0"
  data-testid="skeleton"
>
  <svg
    aria-labelledby="yh6816t-aria"
    height="30"
    role="img"
    style="border-radius: 6px;"
    viewBox="0 0 30 30"
    width="30"
  >
    <title
      id="yh6816t-aria"
    >
      Loading...
    </title>
    <rect
      clip-path="url(#yh6816t-diff)"
      height="100%"
      role="presentation"
      style="fill: url(#yh6816t-animated-diff);"
      width="100%"
      x="0"
      y="0"
    />
    <defs>
      <clippath
        id="yh6816t-diff"
      >
        <rect
          height="30"
          width="30"
          x="0"
          y="0"
        />
      </clippath>
      <lineargradient
        gradientTransform="translate(-2 0)"
        id="yh6816t-animated-diff"
      >
        <stop
          offset="0%"
          stop-color="#f3f3f3"
          stop-opacity="1"
        />
        <stop
          offset="50%"
          stop-color="#ecebeb"
          stop-opacity="1"
        />
        <stop
          offset="100%"
          stop-color="#f3f3f3"
          stop-opacity="1"
        />
        <animatetransform
          attributeName="gradientTransform"
          dur="1s"
          repeatCount="indefinite"
          type="translate"
          values="-2 0; 0 0; 2 0"
        />
      </lineargradient>
    </defs>
  </svg>
</div>
`;

exports[`Skeleton component > General > Render 1`] = `
.c0 {
  height: 30px;
}

<div
  class="c0"
  data-testid="skeleton"
>
  <svg
    aria-labelledby="5rmbwt-aria"
    height="30"
    role="img"
    style="border-radius: 20px;"
    viewBox="0 0 30 30"
    width="30"
  >
    <title
      id="5rmbwt-aria"
    >
      Loading...
    </title>
    <rect
      clip-path="url(#5rmbwt-diff)"
      height="100%"
      role="presentation"
      style="fill: url(#5rmbwt-animated-diff);"
      width="100%"
      x="0"
      y="0"
    />
    <defs>
      <clippath
        id="5rmbwt-diff"
      >
        <rect
          height="30"
          width="30"
          x="0"
          y="0"
        />
      </clippath>
      <lineargradient
        gradientTransform="translate(-2 0)"
        id="5rmbwt-animated-diff"
      >
        <stop
          offset="0%"
          stop-color="#f3f3f3"
          stop-opacity="1"
        />
        <stop
          offset="50%"
          stop-color="#ecebeb"
          stop-opacity="1"
        />
        <stop
          offset="100%"
          stop-color="#f3f3f3"
          stop-opacity="1"
        />
        <animatetransform
          attributeName="gradientTransform"
          dur="1s"
          repeatCount="indefinite"
          type="translate"
          values="-2 0; 0 0; 2 0"
        />
      </lineargradient>
    </defs>
  </svg>
</div>
`;
